--- a/pruebas/01-reading-list/guiroco/package.json
+++ b/pruebas/01-reading-list/guiroco/package.json
@@ -8,6 +8,21 @@
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test"
 	},
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{html,css,less,ejs}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
 	"private": true,
 	"dependencies": {
 		"@angular/animations": "^16.1.0",
@@ -28,12 +43,14 @@
 		"@angular/compiler-cli": "^16.1.0",
 		"@types/jasmine": "~4.3.0",
 		"autoprefixer": "^10.4.14",
+		"husky": "^8.0.3",
 		"jasmine-core": "~4.6.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"lint-staged": "^13.2.3",
 		"postcss": "^8.4.25",
 		"prettier": "3.0.0",
 		"tailwindcss": "^3.3.3",
