--- a/pruebas/01-reading-list/guiroco/package.json
+++ b/pruebas/01-reading-list/guiroco/package.json
@@ -11,7 +11,7 @@
 	},
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
