--- a/pruebas/01-reading-list/guiroco/package.json
+++ b/pruebas/01-reading-list/guiroco/package.json
@@ -7,7 +7,7 @@
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"prettier": "npx prettier . --write"
+		"prettier": "npx prettier --write ."
 	},
 	"husky": {
 		"hooks": {
